--- a/Doubles/View/Base.lproj/Main.storyboard
+++ b/Doubles/View/Base.lproj/Main.storyboard
@@ -4,6 +4,8 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="UIMenu" message="Requires Xcode 11 or later." minToolsVersion="11.0" requiredIntegratedClassName="UICommandDiff"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,6 +17,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="IBn-sG-Jjk">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.73422634610000004" green="0.82328131010000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="barTintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <navigationBarAppearance key="scrollEdgeAppearance">
                             <color key="backgroundColor" name="CellColor"/>
@@ -25,7 +28,7 @@
                         </navigationBarAppearance>
                     </navigationBar>
                     <connections>
-                        <segue destination="dbE-Mn-heL" kind="relationship" relationship="rootViewController" id="iZ6-3r-COW"/>
+                        <segue destination="TMX-l5-PPK" kind="relationship" relationship="rootViewController" id="0zc-Md-zYK"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZAP-uo-a9j" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -35,50 +38,7 @@
         <!--Counting Stars-->
         <scene sceneID="5DT-gp-AA0">
             <objects>
-                <collectionViewController id="dbE-Mn-heL" customClass="ViewController" customModule="Counting_Stars" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="7WY-ro-cRu">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" name="CellColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" sectionInsetReference="safeArea" id="wfY-Dq-Gwf">
-                            <size key="itemSize" width="30" height="30"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="FkA-Vi-cmE" customClass="CollectionCell" customModule="Counting_Stars" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="0Xu-rq-AAx">
-                                    <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="h3a-Dq-ENU">
-                                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vuq-Jh-TYZ">
-                                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="9"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </collectionViewCellContentView>
-                                <color key="backgroundColor" name="cellColor"/>
-                                <connections>
-                                    <outlet property="image" destination="h3a-Dq-ENU" id="Elb-b0-5FY"/>
-                                    <outlet property="label" destination="Vuq-Jh-TYZ" id="Kwl-oe-XhV"/>
-                                </connections>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="dbE-Mn-heL" id="fIN-5j-6Zm"/>
-                            <outlet property="delegate" destination="dbE-Mn-heL" id="sf3-Wq-c9T"/>
-                        </connections>
-                    </collectionView>
+                <collectionViewController id="dbE-Mn-heL" customClass="Game" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" title="Counting Stars" id="kPg-xg-Hep">
                         <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="v6M-EK-qmx">
                             <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -90,16 +50,120 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MJe-Ri-9K0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-358.01526717557249" y="-187.32394366197184"/>
+            <point key="canvasLocation" x="735" y="-187"/>
+        </scene>
+        <!--Counting Stars-->
+        <scene sceneID="pQa-cO-ZXN">
+            <objects>
+                <viewController id="TMX-l5-PPK" customClass="GameViewController" customModule="Counting_Stars" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="enW-Aa-43K">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" dataMode="prototypes" id="7WY-ro-cRu">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="780"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" name="CellColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" sectionInsetReference="safeArea" id="wfY-Dq-Gwf">
+                                    <size key="itemSize" width="30" height="30"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="FkA-Vi-cmE" customClass="CollectionCell" customModule="Counting_Stars" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="0Xu-rq-AAx">
+                                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="h3a-Dq-ENU">
+                                                    <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vuq-Jh-TYZ">
+                                                    <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </collectionViewCellContentView>
+                                        <color key="backgroundColor" name="CellColor"/>
+                                        <connections>
+                                            <outlet property="image" destination="h3a-Dq-ENU" id="Elb-b0-5FY"/>
+                                            <outlet property="label" destination="Vuq-Jh-TYZ" id="Kwl-oe-XhV"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="dbE-Mn-heL" id="fIN-5j-6Zm"/>
+                                    <outlet property="delegate" destination="dbE-Mn-heL" id="sf3-Wq-c9T"/>
+                                </connections>
+                            </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SCORE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="obQ-LK-xHv">
+                                <rect key="frame" x="0.0" y="776" width="393" height="76"/>
+                                <color key="backgroundColor" name="SelectedCellColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="76" id="zFb-fw-jF9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="jsp-g7-yEk"/>
+                        <constraints>
+                            <constraint firstItem="obQ-LK-xHv" firstAttribute="leading" secondItem="jsp-g7-yEk" secondAttribute="leading" id="4md-Vf-gfI"/>
+                            <constraint firstItem="obQ-LK-xHv" firstAttribute="trailing" secondItem="jsp-g7-yEk" secondAttribute="trailing" id="bpU-3j-e2j"/>
+                            <constraint firstAttribute="bottom" secondItem="obQ-LK-xHv" secondAttribute="bottom" id="noX-Mz-7sJ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Counting Stars" id="vEx-Yv-Xlw">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="XNI-JF-dHT">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" pointerInteraction="YES" changesSelectionAsPrimaryAction="YES" id="HxV-yN-CWQ">
+                                <rect key="frame" x="16" y="7" width="87" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <menu key="menu" title="menu" id="EFh-yM-AGu">
+                                    <children>
+                                        <command title="Item 1" id="UeG-c9-Eha"/>
+                                        <command title="Item 2" id="7U4-Ui-Og5"/>
+                                    </children>
+                                </menu>
+                                <state key="normal" title="Button"/>
+                                <state key="disabled" title="levels">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="OOy-Um-qAM">
+                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="restartGame:" destination="TMX-l5-PPK" id="zYN-08-l6s"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="collectionView" destination="7WY-ro-cRu" id="tum-io-78w"/>
+                        <outlet property="levelMenu" destination="HxV-yN-CWQ" id="YHb-EW-qLM"/>
+                        <outlet property="scoreLabel" destination="obQ-LK-xHv" id="Bcm-2H-TE3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Egr-Wi-KED" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-295.41984732824426" y="-187.32394366197184"/>
         </scene>
     </scenes>
     <resources>
         <image name="star.fill" catalog="system" width="128" height="116"/>
         <namedColor name="CellColor">
-            <color red="0.098071347345000781" green="0.11937976078369053" blue="0.4319332951070336" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color red="0.097999997437000275" green="0.11900000274181366" blue="0.43200001120567322" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
-        <namedColor name="cellColor">
-            <color red="0.098071347345000781" green="0.11937976078369053" blue="0.4319332951070336" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        <namedColor name="SelectedCellColor">
+            <color red="0.43599998950958252" green="0.55199998617172241" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
     </resources>
 </document>
